footer.php and SASS to fix the linewrap at the bottom right

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -62,7 +62,7 @@ body {
 
     ul li {
       list-style-type: none;
-
+      white-space: nowrap;
       .fab {
         color: $linkColor;
 
